--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         .product div img {
             height: 230px;
             width: 200px;
+            transition: 0.5s;
+        }
+        .product div img:hover {
+            transform: scale(1.1);
         }
         .product .product_info {
             text-align: left;
